--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,14 +1,15 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4" (ngSubmit)="login()">
+<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
   <div class="form-group">
-    <input class="form-control" placeholder="Nome do usuário" [(ngModel)]="usuario" name="usuario">
-    
+    <input class="form-control" placeholder="Nome do usuário" [(ngModel)]="usuario" name="usuario" #campoUsuario="ngModel" required>
+    <app-mensagem *ngIf="campoUsuario.invalid && campoUsuario.touched" mensagem="Usuario obrigatório"></app-mensagem>
   </div>
 
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Senha" [(ngModel)]="senha" name="senha">
+    <input type="password" class="form-control" placeholder="Senha" [(ngModel)]="senha" name="senha" #campoSenha="ngModel" required>
+    <app-mensagem *ngIf="campoSenha.invalid && campoUsuario.touched" mensagem="Senha obrigatória"></app-mensagem>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block">Login</button>
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
