--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -13,3 +13,6 @@
 
   <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
+<p class="">Não é um usuário?
+  <a [routerLink]="['novousuario']">Cadastre-se!</a>
+</p>
