--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -2,21 +2,31 @@
 <form class="form mt-4" [formGroup]="novoUsuarioForm" (submit)="cadastrar()">
     <div class="form-group">
         <input placeholder="Email" class="form-control" formControlName="email">
-        
-        <app-mensagem *ngIf="novoUsuarioForm.get('email')?.errors && novoUsuarioForm.get('email')?.touched" mensagem="Email obrigatório"></app-mensagem>
 
-        <app-mensagem mensagem="Email no formato incorreto" *ngIf="novoUsuarioForm.get('email')?.errors && novoUsuarioForm.get('email')?.touched"></app-mensagem>
+        <app-mensagem *ngIf="novoUsuarioForm.get('email')?.errors?.['required'] && novoUsuarioForm.get('email')?.touched" mensagem="Email obrigatório"></app-mensagem>
+
+        <app-mensagem mensagem="Email no formato incorreto" *ngIf="novoUsuarioForm.get('email')?.errors?.['email'] && novoUsuarioForm.get('email')?.touched"></app-mensagem>
+
     </div>
     <div class="form-group">
         <input placeholder="Nome completo" class="form-control" formControlName="fullName">
+
         <app-mensagem *ngIf="novoUsuarioForm.get('fullName')?.errors && novoUsuarioForm.get('fullName')?.touched" mensagem="Nome incorreto"></app-mensagem>
+
     </div>
     <div class="form-group">
         <input placeholder="Usuário" class="form-control" formControlName="userName">
-        <app-mensagem *ngIf="novoUsuarioForm.get('userName')?.errors && novoUsuarioForm.get('userName')?.touched" mensagem="Usuário deve ser letra minúscula"></app-mensagem>
+
+        <app-mensagem *ngIf="novoUsuarioForm.get('userName')?.errors?.['minusculo'] && novoUsuarioForm.get('userName')?.touched" mensagem="Usuário deve ser letra minúscula"></app-mensagem>
+
+        <app-mensagem *ngIf="novoUsuarioForm.get('userName')?.errors?.['usuarioExistente']" mensagem="Usuário já existe"></app-mensagem>
+
     </div>
     <div class="form-group">
         <input placeholder="Senha" type="password" class="form-control" formControlName="password">
+
+        <app-mensagem *ngIf="novoUsuarioForm.errors?.['senhaIgualUsuario']" mensagem="Usuario e senha não podem ser iguais"></app-mensagem>
+
     </div>
     <button class="btn btn-primary btn-block" >Cadastro</button>
 </form>
